fix: input edit tiket and event

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/tittlelogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="desctiption"
+      content="Segera buat event kamu sendiri, atur penjualan tiketmu, dan memudahkan setiap event yang kamu miliki."
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Otakutixx</title>
+    <title>OtakuTixx - Belanja Tiket & Buat Tiket Menjadi Lebih Mudah</title>
   </head>
   <body>
     <div id="root"></div>
