--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/tittlelogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OtakuTixx - Belanja Tiket & Buat Tiket Menjadi Lebih Mudah</title>
     <meta
-      name="desctiption"
+      name="keywords"
+      content="otakutixx, Otakutixx, Otaku, otaku, Otaku Tixx, otaku tixx, tiket anime"
+    />
+    <meta
+      name="description"
       content="Segera buat event kamu sendiri, atur penjualan tiketmu, dan memudahkan setiap event yang kamu miliki."
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>OtakuTixx - Belanja Tiket & Buat Tiket Menjadi Lebih Mudah</title>
   </head>
   <body>
     <div id="root"></div>
